# django-companyatlas

./: MANIFEST.in  README.md  SETUP.md  USAGE_EXAMPLES.md  dev.py  env.example  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: assistant-guidelines.md
companyatlas/: __init__.py  admin.py  apps.py  helpers.py  models.py  urls.py  views.py
companyatlas/admin/: __init__.py  backend.py  backend_search.py
companyatlas/migrations/: 0001_initial.py  0002_backendinfo_companycountrydata_companydata_and_more.py  __init__.py
companyatlas/models/: __init__.py  backend.py  backend_search.py  company.py
companyatlas/templates/admin/companyatlas/backendinfo/: change_form.html
companyatlas/templates/admin/companyatlas/backendsearchresult/: change_list.html
docs/: AI.md  structure.md
src/djcompanyatlas/: __init__.py  apps.py  helpers.py  models.py  urls.py  views.py
src/djcompanyatlas/admin/: __init__.py  address.py  backend.py  backend_search.py  company.py  data.py  document.py  event.py  person.py  referentiel.py  views.py
src/djcompanyatlas/admin/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
src/djcompanyatlas/forms/: __init__.py  person.py
src/djcompanyatlas/forms/virtuals/: company.py
src/djcompanyatlas/helpers/: company.py  source.py
src/djcompanyatlas/management/commands/: load_referentiel.py
src/djcompanyatlas/managers/: company.py  data.py  referentiel.py
src/djcompanyatlas/managers/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
src/djcompanyatlas/migrations/: 0001_initial.py  0002_alter_companyatlasdata_company.py  0003_alter_companyatlasaddress_options_and_more.py  0004_companyatlasperson.py
src/djcompanyatlas/models/: __init__.py  address.py  company.py  data.py  document.py  event.py  person.py  referentiel.py  source.py
src/djcompanyatlas/models/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
src/djcompanyatlas/templates/admin/djcompanyatlas/backendinfo/: change_form.html
src/djcompanyatlas/templates/admin/djcompanyatlas/backendsearchresult/: change_list.html
tests/: __init__.py  conftest.py  settings.py  test_models.py  urls.py
