[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-companyatlas"
version = "0.1.0"
description = "Django integration for company information lookup and enrichment"
readme = "README.md"
authors = [
    { name = "Charl", email = "charl@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["django", "company", "enrichment", "lookup"]
requires-python = ">=3.10"
dependencies = [
    "Django>=3.2",
    "python-companyatlas>=0.1.0",
    "django-providerkit>=0.1.0",
    "django-virtualqueryset>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "django-stubs>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-companyatlas"

[tool.setuptools.packages.find]
where = ["src"]
include = ["djcompanyatlas*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "python_companyatlas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "providerkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "virtualqueryset.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "djproviderkit.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

